--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 # Config file for automatic testing at travis-ci.org
 
-sudo: false
+sudo: required
 
 language: python
 
@@ -8,7 +8,7 @@ python:
   - "3.6"
 
 install:
-  - apt-get update -y
+  - sudo apt-get update -y
   - make install
 
 script:
